--- a/Piano2Guitar/wwwroot/index.html
+++ b/Piano2Guitar/wwwroot/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Piano2Guitar</title>
+    <title>Piano to Guitar: Note Converter</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Piano2Guitar.styles.css" rel="stylesheet" />
+    <meta name="description" content="Easily convert piano notes to guitar notes and vice versa. A handy tool for musicians to learn and explore notes on both instruments.">
+
 </head>
 
 <body>
